fix screenshot overflow in safari

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -26,7 +26,6 @@ body
   font-family Ratio, sans-serif
   font-size font-size-sm
   color gray-dark
-  overflow-x hidden
   @media screen and (min-width: 721px)
     font-size font-size-ms
 
