--- a/src/styles/projects.styl
+++ b/src/styles/projects.styl
@@ -2,6 +2,7 @@
 
 .project
   position relative
+  overflow: hidden
 
   a
     transition color .25s
